--- a/plugin.xml
+++ b/plugin.xml
@@ -54,18 +54,19 @@
             <uses-permission android:name="android.permission.RECORD_AUDIO" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.CAMERA" />
-
-            <provider
-                    android:name="android.support.v4.content.FileProvider"
-                    android:authorities="nl.x-services.plugins.videocaptureplus.provider"
-                    android:exported="false"
-                    android:grantUriPermissions="true">
-                <meta-data
-                        android:name="android.support.FILE_PROVIDER_PATHS"
-                        android:resource="@xml/provider_paths"/>
-            </provider>
-
         </config-file>
+            
+        <config-file target="AndroidManifest.xml" parent="application">
+             <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="nl.x-services.plugins.videocaptureplus.provider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+                        <meta-data
+                            android:name="android.support.FILE_PROVIDER_PATHS"
+                            android:resource="@xml/provider_paths"/>
+             </provider>
+	</config-file>
 
         <source-file src="src/android/nl/xservices/plugins/videocaptureplus/VideoCapturePlus.java"
                      target-dir="src/nl/xservices/plugins/videocaptureplus"/>
